--- a/ads_dashboard/templates/ads/campaign_stats_chart.html
+++ b/ads_dashboard/templates/ads/campaign_stats_chart.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 
 {% block content %}
 <div class="ui segment">
@@ -25,28 +26,23 @@
     </form>
 </div>
 
-<table class="ui celled striped table">
-    <thead>
-    <tr>
-        <th>#</th>
-        <th>Data source</th>
-        <th>Campaign</th>
-        <th>Date</th>
-        <th>Clicks</th>
-        <th>Impressions</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for object in objects|slice:"100" %}
-    <tr>
-        <td>{{ forloop.counter }}</td>
-        <td>{{ object.data_source }}</td>
-        <td>{{ object.campaign }}</td>
-        <td>{{ object.date }}</td>
-        <td>{{ object.clicks }}</td>
-        <td>{{ object.impressions }}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
+<div class="ui steps">
+  <div class="active step">
+    <i class="mouse pointer icon"></i>
+    <div class="content">
+      <div class="title">Clicks</div>
+      <div class="description">{{ total_clicks|intcomma }}</div>
+    </div>
+  </div>
+  <div class="step">
+    <i class="eye icon"></i>
+    <div class="content">
+      <div class="title">Impressions</div>
+      <div class="description">{{ total_impressions|intcomma }}</div>
+    </div>
+  </div>
+</div>
+
+{% include "ads/_chart.html" with data=objects %}
+
 {% endblock %}
