--- a/ads_dashboard/templates/base.html
+++ b/ads_dashboard/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,23 +7,22 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ads Chart</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script src="https://www.amcharts.com/lib/4/core.js"></script>
+    <script src="https://www.amcharts.com/lib/4/charts.js"></script>
+    <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
-    <div class="ui container">
-        <h1 class="ui header">
-  Campaign Stats
-  <div class="sub header">To track your progress</div>
-</h1>
-        {% block content %}{% endblock %}
-    </div>
-
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('select.dropdown').dropdown();
-        });
-    </script>
+<div class="ui container body-wrapper">
+    <h1 class="ui header">
+        Campaign Stats
+        <div class="sub header">To track your progress</div>
+    </h1>
+    {% block content %}{% endblock %}
+</div>
 </body>
 </html>
